[package]
name = "adc"
version = "0.1.0"
authors = ["Shane <shanemmattner@gmail.com>"]
edition = "2021"
resolver = "2"


[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"



[dependencies]
embedded-hal     = { version = "0.2.7",  features = ["unproven"] }
embedded-hal-1   = { version = "=1.0.0-alpha.9", optional = true, package = "embedded-hal" }
embedded-hal-nb  = { version = "=1.0.0-alpha.1", optional = true }
xtensa-lx        = { version = "0.7.0",  features = ["esp32"] }
xtensa-lx-rt     = { version = "0.13.0", features = ["esp32"], optional = true }
anyhow = { version = "1", features = ["backtrace"] }


[dev-dependencies]
critical-section  = "1.1.0"
embedded-graphics = "0.7.1"
esp-backtrace     = { version = "0.2.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.3.0", features = ["esp32"] }
smart-leds        = "0.3.0"
ssd1306           = "0.7.1"

[build-dependencies]
embuild = "0.29"
anyhow = "1"