[package]
name = "adc"
version = "0.39.0"
authors = ["Shane <shanemmattner@gmail.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.31", features = ["binstart"] }
esp-idf-hal = "0.34.1"
embedded-hal-1-0-0 = { version = "1.0.0-alpha.7", package = "embedded-hal" }
nb = "1.0.0"

[build-dependencies]
embuild = "0.28"
anyhow = "0.4"