[package]
name = "blinky"
version = "0.1.0"
authors = ["Shane <shanemmattner@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"


[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
embedded-hal = "1.0.0-alpha.8"
embedded-svc = "0.22.0"
esp-idf-hal = "0.38"
esp-idf-svc = "0.42.0"
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
log = "0.4"
sensible-env-logger = "0.2.0"
oorandom = "11.1.3"

[build-dependencies]
embuild = "0.29"
anyhow = "1"