[package]
name = "i2c"
version = "0.1.0"
authors = ["Shane <shane@chewielabs.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "alloc", "esp-idf-sys"]
std = ["alloc", "esp-idf-sys/std", "edge-executor?/std"]
alloc = []
riscv-ulp-hal = []
embassy-time-isr-queue-timer00 = ["embassy-time", "embassy-sync"]
embassy-time-isr-queue-timer01 = ["embassy-time", "embassy-sync"]
embassy-time-isr-queue-timer10 = ["embassy-time", "embassy-sync"]
embassy-time-isr-queue-timer11 = ["embassy-time", "embassy-sync"]

[dependencies]
nb = "1.0.0"
embedded-can = "0.4.1"
embedded-hal = "=1.0.0-alpha.9"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
embedded-hal-nb = "=1.0.0-alpha.1"
esp-idf-sys = { version = "0.31.10", optional = true, default-features = false, features = ["native"] }
critical-section = { version = "1.1", optional = true }
heapless = "0.7"
embassy-sync = { version = "0.1", optional = true, git = "https://github.com/ivmarkov/embassy" }
embassy-time = { version = "0.1", optional = true, features = ["tick-hz-1_000_000"], git = "https://github.com/ivmarkov/embassy" }
edge-executor = { version = "0.2", optional = true, default-features = false }

[build-dependencies]
embuild = "0.30.4"
anyhow = "1"

[dev-dependencies]
anyhow = "1"
esp-idf-sys = { version = "0.31.10", features = ["native", "binstart"] }