[package]
name = "project"
version = "0.1.0"
authors = ["Shane <shane@chewielabs.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.9", features = ["binstart"] }
esp-idf-hal = "=0.38"
esp-idf-svc="0.42"
embedded-hal = "0.2.7"
log="0.4"
nb = "1.0.0"


[build-dependencies]
embuild = "0.30"
anyhow = "1"
