[package]
name = "full-project"
version = "0.1.0"
authors = ["Shane <shane@chewielabs.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
embedded-hal = "0.2"
embedded-svc = "0.22.0"
esp-idf-hal = "0.38"
esp-idf-svc="0.42.0"
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
log="0.4"
sensible-env-logger = "0.2.0"
anyhow = { version = "1", features = ["backtrace"] }
nb = "1.0.0"
sx1509 = "0.2.0"
mqttrust = "0.6.0"
freertos_rs = "0.3"


[build-dependencies]
embuild = "0.30"
anyhow = "1"
