[package]
name = "spi"
version = "0.1.0"
authors = ["Shane <shane@chewielabs.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-hal = "0.38"
nb = "1.0.0"
log="0.4"

[build-dependencies]
embuild = "0.28"
anyhow = "1"